# OpenFX-Experiments

./: .clang-format  CMakeLists.txt  LICENSE  main.cpp
include/: host.h  imageEffect.h  imageEffectClip.h  imageEffectImageRef.h  imageEffectSuite.h  imageIo.h  memorySuite.h  messageSuiteV1.h  multiThreadSuite.h  ofxUtilities.h  parameterSet.h  propSuite.h  propertySet.h  types.h
include/openfx/: ofxOpenGLRender.h
plugins/: CMakeLists.txt  basic.cpp  invert.cpp  rectangle.cpp
src/: CMakeLists.txt  host.cpp  imageEffect.cpp  imageEffectClip.cpp  imageEffectImageRef.cpp  imageEffectSuite.cpp  imageIo.cpp  memorySuite.cpp  messageSuiteV1.cpp  multiThreadSuite.cpp  parameterSet.cpp  propSuite.cpp  propertySet.cpp
